ref #44 wip manage org api client
