# src/api/$api.ts
@@ -5,7 +5,9 @@ import type { Methods as Methods1 } from "./organizations";
 import type { Methods as Methods2 } from "./organizations/_organizationCode@string";
 import type { Methods as Methods3 } from "./organizations/_organizationCode@string/reports";
 import type { Methods as Methods4 } from "./organizations/_organizationCode@string/users";
-import type { Methods as Methods5 } from "./users/me";
+import type { Methods as Methods5 } from "./organizations/_organizationCode@string/users/_userId@string";
+import type { Methods as Methods6 } from "./reports/_reportId@string";
+import type { Methods as Methods7 } from "./users/me";
 import type { AspidaClient, BasicHeaders } from "aspida";
 
 const api = <T>({ baseURL, fetch }: AspidaClient<T>) => {
@@ -18,6 +20,7 @@ const api = <T>({ baseURL, fetch }: AspidaClient<T>) => {
     const GET = "GET";
     const POST = "POST";
     const PUT = "PUT";
+    const DELETE = "DELETE";
 
     return {
         organization: {
@@ -87,6 +90,31 @@ const api = <T>({ baseURL, fetch }: AspidaClient<T>) => {
                             `${prefix}${prefix1}${PATH1}${option && option.query ? `?${dataToURLString(option.query)}` : ""}`,
                     },
                     users: {
+                        _userId: (val3: string) => {
+                            const prefix3 = `${prefix1}${PATH3}/${val3}`;
+
+                            return {
+                                /**
+                                 * @param option.body - ユーザーロール更新リクエスト
+                                 */
+                                put: (option: { body: Methods5["put"]["reqBody"]; config?: T | undefined }) =>
+                                    fetch<void, BasicHeaders, Methods5["put"]["status"]>(prefix, prefix3, PUT, option).send(),
+                                /**
+                                 * @param option.body - ユーザーロール更新リクエスト
+                                 */
+                                $put: (option: { body: Methods5["put"]["reqBody"]; config?: T | undefined }) =>
+                                    fetch<void, BasicHeaders, Methods5["put"]["status"]>(prefix, prefix3, PUT, option)
+                                        .send()
+                                        .then((r) => r.body),
+                                delete: (option?: { config?: T | undefined } | undefined) =>
+                                    fetch<void, BasicHeaders, Methods5["delete"]["status"]>(prefix, prefix3, DELETE, option).send(),
+                                $delete: (option?: { config?: T | undefined } | undefined) =>
+                                    fetch<void, BasicHeaders, Methods5["delete"]["status"]>(prefix, prefix3, DELETE, option)
+                                        .send()
+                                        .then((r) => r.body),
+                                $path: () => `${prefix}${prefix3}`,
+                            };
+                        },
                         /**
                          * @returns OK
                          */
@@ -105,21 +133,16 @@ const api = <T>({ baseURL, fetch }: AspidaClient<T>) => {
                                 .json()
                                 .then((r) => r.body),
                         /**
-                         * @returns OK
+                         * @param option.body - メンバー招待リクエスト
                          */
-                        post: (option?: { config?: T | undefined } | undefined) =>
-                            fetch<Methods4["post"]["resBody"], BasicHeaders, Methods4["post"]["status"]>(
-                                prefix,
-                                `${prefix1}${PATH3}`,
-                                POST,
-                                option
-                            ).json(),
+                        post: (option: { body: Methods4["post"]["reqBody"]; config?: T | undefined }) =>
+                            fetch<void, BasicHeaders, Methods4["post"]["status"]>(prefix, `${prefix1}${PATH3}`, POST, option).send(),
                         /**
-                         * @returns OK
+                         * @param option.body - メンバー招待リクエスト
                          */
-                        $post: (option?: { config?: T | undefined } | undefined) =>
-                            fetch<Methods4["post"]["resBody"], BasicHeaders, Methods4["post"]["status"]>(prefix, `${prefix1}${PATH3}`, POST, option)
-                                .json()
+                        $post: (option: { body: Methods4["post"]["reqBody"]; config?: T | undefined }) =>
+                            fetch<void, BasicHeaders, Methods4["post"]["status"]>(prefix, `${prefix1}${PATH3}`, POST, option)
+                                .send()
                                 .then((r) => r.body),
                         $path: () => `${prefix}${prefix1}${PATH3}`,
                     },
@@ -166,18 +189,39 @@ const api = <T>({ baseURL, fetch }: AspidaClient<T>) => {
                     .then((r) => r.body),
             $path: () => `${prefix}${PATH2}`,
         },
+        reports: {
+            _reportId: (val1: string) => {
+                const prefix1 = `${PATH1}/${val1}`;
+
+                return {
+                    /**
+                     * @param option.body - 日報レビューリクエスト
+                     */
+                    put: (option: { body: Methods6["put"]["reqBody"]; config?: T | undefined }) =>
+                        fetch<void, BasicHeaders, Methods6["put"]["status"]>(prefix, prefix1, PUT, option).send(),
+                    /**
+                     * @param option.body - 日報レビューリクエスト
+                     */
+                    $put: (option: { body: Methods6["put"]["reqBody"]; config?: T | undefined }) =>
+                        fetch<void, BasicHeaders, Methods6["put"]["status"]>(prefix, prefix1, PUT, option)
+                            .send()
+                            .then((r) => r.body),
+                    $path: () => `${prefix}${prefix1}`,
+                };
+            },
+        },
         users: {
             me: {
                 /**
                  * @returns OK
                  */
                 get: (option?: { config?: T | undefined } | undefined) =>
-                    fetch<Methods5["get"]["resBody"], BasicHeaders, Methods5["get"]["status"]>(prefix, PATH4, GET, option).json(),
+                    fetch<Methods7["get"]["resBody"], BasicHeaders, Methods7["get"]["status"]>(prefix, PATH4, GET, option).json(),
                 /**
                  * @returns OK
                  */
                 $get: (option?: { config?: T | undefined } | undefined) =>
-                    fetch<Methods5["get"]["resBody"], BasicHeaders, Methods5["get"]["status"]>(prefix, PATH4, GET, option)
+                    fetch<Methods7["get"]["resBody"], BasicHeaders, Methods7["get"]["status"]>(prefix, PATH4, GET, option)
                         .json()
                         .then((r) => r.body),
                 $path: () => `${prefix}${PATH4}`,
